# BITalino-LSL_Bridge

./: CMakeLists.txt  README.md  main.cpp
include/: ButterworthFilter.h  SimpleFilter.h  circular_buffer.h
lib/: liblsl.so.1.14.0
